test_inputs/bad/duplicate_function.lat
int fun() {
    return 0;
}

boolean fun() {
    return false;
}

int main() {
    return 0;
}
